src/gdx-cpp/utils/JsonReader.cpp

/* #line 1 "JsonReader.rl" */

/*
    Copyright 2011 Aevum Software aevum @ aevumlab.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

    @author Victor Vicente de Carvalho victor.carvalho@aevumlab.com
    @author Ozires Bortolon de Faria ozires@aevumlab.com
*/

#include "JsonReader.hpp"
#include <stdexcept>
#include <list>
#include "StringConvertion.hpp"
#include <string.h>
#include "ArrayUtils.hpp"

#include "gdx-cpp/Gdx.hpp"

using namespace gdx;


JsonValue::ptr JsonReader::root;
JsonValue::ptr JsonReader::current;
std::list< JsonValue::ptr > JsonReader::elements;


/* #line 42 "JsonReader.cpp" */
static const int json_start = 1;
static const int json_first_final = 71;
static const int json_error = 0;

static const int json_en_object = 9;
static const int json_en_array = 43;
static const int json_en_main = 1;


/* #line 41 "JsonReader.rl" */


JsonReader::JsonReader()
{
}

JsonValue::ptr JsonReader::parse (const std::string& json) {
    return parse(json.c_str(), 0, json.length());
}

JsonValue::ptr JsonReader::parse (const FileHandle& file) {
    try {
        FileHandle::buffer_ptr buffer;
        int size = file.readBytes(buffer);

        return parse(buffer.get(), 0, size);
    } catch (...) {
        throw std::runtime_error("Error parsing file: " + file.name());
    }
}

JsonValue::ptr JsonReader::parse (const char* data, int offset, int length) {
    elements.clear();

    unsigned int cs, top = 0;

    std::vector<int> stack;
    char* s = NULL, *p = (char*)data + offset,* pe = (char*)data + length,* eof = pe;

    std::list<std::string> names;

    bool needsUnescape = false;

    bool debug = false;

    if (debug) {
       gdx_log_debug("JsonReader","\n");
    }

    try {
        
/* #line 94 "JsonReader.cpp" */
	{
	cs = json_start;
	top = 0;
	}

/* #line 100 "JsonReader.cpp" */
	{
	if ( p == pe )
		goto _test_eof;
	goto _resume;

_again:
	switch ( cs ) {
		case 1: goto st1;
		case 0: goto st0;
		case 2: goto st2;
		case 3: goto st3;
		case 71: goto st71;
		case 4: goto st4;
		case 72: goto st72;
		case 5: goto st5;
		case 73: goto st73;
		case 6: goto st6;
		case 74: goto st74;
		case 7: goto st7;
		case 8: goto st8;
		case 75: goto st75;
		case 76: goto st76;
		case 77: goto st77;
		case 78: goto st78;
		case 79: goto st79;
		case 80: goto st80;
		case 81: goto st81;
		case 82: goto st82;
		case 83: goto st83;
		case 84: goto st84;
		case 85: goto st85;
		case 86: goto st86;
		case 87: goto st87;
		case 88: goto st88;
		case 89: goto st89;
		case 9: goto st9;
		case 10: goto st10;
		case 11: goto st11;
		case 12: goto st12;
		case 13: goto st13;
		case 14: goto st14;
		case 15: goto st15;
		case 16: goto st16;
		case 17: goto st17;
		case 18: goto st18;
		case 90: goto st90;
		case 19: goto st19;
		case 20: goto st20;
		case 21: goto st21;
		case 22: goto st22;
		case 23: goto st23;
		case 24: goto st24;
		case 25: goto st25;
		case 26: goto st26;
		case 27: goto st27;
		case 28: goto st28;
		case 29: goto st29;
		case 30: goto st30;
		case 31: goto st31;
		case 32: goto st32;
		case 33: goto st33;
		case 34: goto st34;
		case 35: goto st35;
		case 36: goto st36;
		case 37: goto st37;
		case 38: goto st38;
		case 39: goto st39;
		case 40: goto st40;
		case 41: goto st41;
		case 42: goto st42;
		case 43: goto st43;
		case 44: goto st44;
		case 45: goto st45;
		case 46: goto st46;
		case 47: goto st47;
		case 48: goto st48;
		case 91: goto st91;
		case 49: goto st49;
		case 50: goto st50;
		case 51: goto st51;
		case 52: goto st52;
		case 53: goto st53;
		case 54: goto st54;
		case 55: goto st55;
		case 56: goto st56;
		case 57: goto st57;
		case 58: goto st58;
		case 59: goto st59;
		case 60: goto st60;
		case 61: goto st61;
		case 62: goto st62;
		case 63: goto st63;
		case 64: goto st64;
		case 65: goto st65;
		case 66: goto st66;
		case 67: goto st67;
		case 68: goto st68;
		case 69: goto st69;
		case 70: goto st70;
	default: break;
	}

	if ( ++p == pe )
		goto _test_eof;
_resume:
	switch ( cs )
	{
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
	switch( (*p) ) {
		case 32: goto st1;
		case 34: goto st2;
		case 36: goto tr3;
		case 45: goto tr4;
		case 48: goto tr5;
		case 91: goto tr7;
		case 95: goto tr3;
		case 102: goto tr8;
		case 110: goto tr9;
		case 116: goto tr10;
		case 123: goto tr11;
	}
	if ( (*p) < 49 ) {
		if ( 9 <= (*p) && (*p) <= 13 )
			goto st1;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr3;
		} else if ( (*p) >= 65 )
			goto tr3;
	} else
		goto tr6;
	goto st0;
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 34: goto tr13;
		case 92: goto tr14;
	}
	goto tr12;
tr12:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
	goto st3;
tr18:
/* #line 92 "JsonReader.rl" */
	{
                        needsUnescape = true;
                }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
/* #line 266 "JsonReader.cpp" */
	switch( (*p) ) {
		case 34: goto tr16;
		case 92: goto st4;
	}
	goto st3;
tr7:
/* #line 187 "JsonReader.rl" */
	{
                        std::string name = "";
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }

                        if (debug) {
                           gdx_log_debug("JsonReader","startArray: %s", name.c_str());
                        }
                        startArray(name);
                        {
					stack.resize(top + 1);
				{stack[top++] = 71; goto st43;}}
                }
	goto st71;
tr11:
/* #line 167 "JsonReader.rl" */
	{
                        std::string name = "";
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }

                        if (debug) {
                           gdx_log_debug("JsonReader","startObject: %s", name.c_str());
                        }
                        startObject(name);
                        {
					stack.resize(top + 1);
				{stack[top++] = 71; goto st9;}}
                }
	goto st71;
tr13:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
/* #line 102 "JsonReader.rl" */
	{
                        std::string value(s, p-s);
                        s = p;
                        if (needsUnescape) value = unescape(value);
                        std::string name;
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }

                        if (debug)gdx_log_debug("JsonReader","string: %s = %s", name.c_str(), value.c_str());;
                        string(name, value);
                }
	goto st71;
tr16:
/* #line 102 "JsonReader.rl" */
	{
                        std::string value(s, p-s);
                        s = p;
                        if (needsUnescape) value = unescape(value);
                        std::string name;
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }

                        if (debug)gdx_log_debug("JsonReader","string: %s = %s", name.c_str(), value.c_str());;
                        string(name, value);
                }
	goto st71;
tr145:
/* #line 115 "JsonReader.rl" */
	{
                        std::string value(s, p-s);
                        s = p;
                        std::string name;
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }
                        if (debug)gdx_log_debug("JsonReader","number: %s = %s", name.c_str(), value.c_str());

                        if (value.find(".") != std::string::npos) {
                            number(name, from_string<float>(value));
                        } else {
                            number(name, from_string<int>(value));
                        }
                }
	goto st71;
tr152:
/* #line 143 "JsonReader.rl" */
	{
                        std::string name;
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }

                        if (debug) {
                           gdx_log_debug("JsonReader","number: %s = false", name.c_str());
                        }
                        boolean(name, false);
                }
	goto st71;
tr156:
/* #line 155 "JsonReader.rl" */
	{
                        std::string name = "";
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }

                        if (debug) {
                           gdx_log_debug("JsonReader","nulll: %s", name.c_str());
                        }
                        string(name, "");
                }
	goto st71;
tr160:
/* #line 131 "JsonReader.rl" */
	{
                        std::string name = "";
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }

                        if (debug) {
                           gdx_log_debug("JsonReader","number: %s = true", name.c_str());
                        }
                        boolean(name, true);
                }
	goto st71;
st71:
	if ( ++p == pe )
		goto _test_eof71;
case 71:
/* #line 413 "JsonReader.cpp" */
	if ( (*p) == 32 )
		goto st71;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st71;
	goto st0;
tr14:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
/* #line 430 "JsonReader.cpp" */
	switch( (*p) ) {
		case 34: goto tr18;
		case 47: goto tr18;
		case 92: goto tr18;
		case 98: goto tr18;
		case 102: goto tr18;
		case 110: goto tr18;
		case 114: goto tr18;
	}
	if ( 116 <= (*p) && (*p) <= 117 )
		goto tr18;
	goto st0;
tr3:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
	goto st72;
st72:
	if ( ++p == pe )
		goto _test_eof72;
case 72:
/* #line 454 "JsonReader.cpp" */
	switch( (*p) ) {
		case 32: goto tr16;
		case 44: goto st0;
		case 58: goto st0;
		case 93: goto st0;
		case 125: goto st0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr16;
	goto st72;
tr4:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
/* #line 476 "JsonReader.cpp" */
	if ( (*p) == 48 )
		goto st73;
	if ( 49 <= (*p) && (*p) <= 57 )
		goto st76;
	goto st0;
tr5:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
	goto st73;
st73:
	if ( ++p == pe )
		goto _test_eof73;
case 73:
/* #line 493 "JsonReader.cpp" */
	switch( (*p) ) {
		case 32: goto tr145;
		case 46: goto st6;
		case 69: goto st7;
		case 101: goto st7;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr145;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st74;
	goto st0;
st74:
	if ( ++p == pe )
		goto _test_eof74;
case 74:
	switch( (*p) ) {
		case 32: goto tr145;
		case 69: goto st7;
		case 101: goto st7;
	}
	if ( (*p) > 13 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st74;
	} else if ( (*p) >= 9 )
		goto tr145;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	switch( (*p) ) {
		case 43: goto st8;
		case 45: goto st8;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st75;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st75;
	goto st0;
st75:
	if ( ++p == pe )
		goto _test_eof75;
case 75:
	if ( (*p) == 32 )
		goto tr145;
	if ( (*p) > 13 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st75;
	} else if ( (*p) >= 9 )
		goto tr145;
	goto st0;
tr6:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
	goto st76;
st76:
	if ( ++p == pe )
		goto _test_eof76;
case 76:
/* #line 566 "JsonReader.cpp" */
	switch( (*p) ) {
		case 32: goto tr145;
		case 46: goto st6;
		case 69: goto st7;
		case 101: goto st7;
	}
	if ( (*p) > 13 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st76;
	} else if ( (*p) >= 9 )
		goto tr145;
	goto st0;
tr8:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
	goto st77;
st77:
	if ( ++p == pe )
		goto _test_eof77;
case 77:
/* #line 590 "JsonReader.cpp" */
	switch( (*p) ) {
		case 32: goto tr16;
		case 44: goto st0;
		case 58: goto st0;
		case 93: goto st0;
		case 97: goto st78;
		case 125: goto st0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr16;
	goto st72;
st78:
	if ( ++p == pe )
		goto _test_eof78;
case 78:
	switch( (*p) ) {
		case 32: goto tr16;
		case 44: goto st0;
		case 58: goto st0;
		case 93: goto st0;
		case 108: goto st79;
		case 125: goto st0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr16;
	goto st72;
st79:
	if ( ++p == pe )
		goto _test_eof79;
case 79:
	switch( (*p) ) {
		case 32: goto tr16;
		case 44: goto st0;
		case 58: goto st0;
		case 93: goto st0;
		case 115: goto st80;
		case 125: goto st0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr16;
	goto st72;
st80:
	if ( ++p == pe )
		goto _test_eof80;
case 80:
	switch( (*p) ) {
		case 32: goto tr16;
		case 44: goto st0;
		case 58: goto st0;
		case 93: goto st0;
		case 101: goto st81;
		case 125: goto st0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr16;
	goto st72;
st81:
	if ( ++p == pe )
		goto _test_eof81;
case 81:
	if ( (*p) == 32 )
		goto tr152;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr152;
	goto st0;
tr9:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
	goto st82;
st82:
	if ( ++p == pe )
		goto _test_eof82;
case 82:
/* #line 667 "JsonReader.cpp" */
	switch( (*p) ) {
		case 32: goto tr16;
		case 44: goto st0;
		case 58: goto st0;
		case 93: goto st0;
		case 117: goto st83;
		case 125: goto st0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr16;
	goto st72;
st83:
	if ( ++p == pe )
		goto _test_eof83;
case 83:
	switch( (*p) ) {
		case 32: goto tr16;
		case 44: goto st0;
		case 58: goto st0;
		case 93: goto st0;
		case 108: goto st84;
		case 125: goto st0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr16;
	goto st72;
st84:
	if ( ++p == pe )
		goto _test_eof84;
case 84:
	switch( (*p) ) {
		case 32: goto tr16;
		case 44: goto st0;
		case 58: goto st0;
		case 93: goto st0;
		case 108: goto st85;
		case 125: goto st0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr16;
	goto st72;
st85:
	if ( ++p == pe )
		goto _test_eof85;
case 85:
	if ( (*p) == 32 )
		goto tr156;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr156;
	goto st0;
tr10:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
	goto st86;
st86:
	if ( ++p == pe )
		goto _test_eof86;
case 86:
/* #line 729 "JsonReader.cpp" */
	switch( (*p) ) {
		case 32: goto tr16;
		case 44: goto st0;
		case 58: goto st0;
		case 93: goto st0;
		case 114: goto st87;
		case 125: goto st0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr16;
	goto st72;
st87:
	if ( ++p == pe )
		goto _test_eof87;
case 87:
	switch( (*p) ) {
		case 32: goto tr16;
		case 44: goto st0;
		case 58: goto st0;
		case 93: goto st0;
		case 117: goto st88;
		case 125: goto st0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr16;
	goto st72;
st88:
	if ( ++p == pe )
		goto _test_eof88;
case 88:
	switch( (*p) ) {
		case 32: goto tr16;
		case 44: goto st0;
		case 58: goto st0;
		case 93: goto st0;
		case 101: goto st89;
		case 125: goto st0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr16;
	goto st72;
st89:
	if ( ++p == pe )
		goto _test_eof89;
case 89:
	if ( (*p) == 32 )
		goto tr160;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr160;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	switch( (*p) ) {
		case 32: goto st9;
		case 34: goto st10;
		case 36: goto tr26;
		case 44: goto st17;
		case 95: goto tr26;
		case 125: goto tr28;
	}
	if ( (*p) < 65 ) {
		if ( 9 <= (*p) && (*p) <= 13 )
			goto st9;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr26;
	} else
		goto tr26;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	switch( (*p) ) {
		case 34: goto tr30;
		case 92: goto tr31;
	}
	goto tr29;
tr29:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
	goto st11;
tr89:
/* #line 92 "JsonReader.rl" */
	{
                        needsUnescape = true;
                }
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
/* #line 827 "JsonReader.cpp" */
	switch( (*p) ) {
		case 34: goto tr33;
		case 92: goto st42;
	}
	goto st11;
tr30:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
/* #line 95 "JsonReader.rl" */
	{
                        std::string name(s, p-s);
                        s = p;
                        if (needsUnescape) name = unescape(name);
                        if (debug)gdx_log_debug("JsonReader","name: %s", name.c_str());
                        names.push_back(name);
                }
	goto st12;
tr33:
/* #line 95 "JsonReader.rl" */
	{
                        std::string name(s, p-s);
                        s = p;
                        if (needsUnescape) name = unescape(name);
                        if (debug)gdx_log_debug("JsonReader","name: %s", name.c_str());
                        names.push_back(name);
                }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
/* #line 862 "JsonReader.cpp" */
	switch( (*p) ) {
		case 32: goto st12;
		case 58: goto st13;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st12;
	goto st0;
tr55:
/* #line 95 "JsonReader.rl" */
	{
                        std::string name(s, p-s);
                        s = p;
                        if (needsUnescape) name = unescape(name);
                        if (debug)gdx_log_debug("JsonReader","name: %s", name.c_str());
                        names.push_back(name);
                }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
/* #line 884 "JsonReader.cpp" */
	switch( (*p) ) {
		case 32: goto st13;
		case 34: goto st14;
		case 36: goto tr38;
		case 45: goto tr39;
		case 48: goto tr40;
		case 91: goto tr42;
		case 95: goto tr38;
		case 102: goto tr43;
		case 110: goto tr44;
		case 116: goto tr45;
		case 123: goto tr46;
	}
	if ( (*p) < 49 ) {
		if ( 9 <= (*p) && (*p) <= 13 )
			goto st13;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr38;
		} else if ( (*p) >= 65 )
			goto tr38;
	} else
		goto tr41;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	switch( (*p) ) {
		case 34: goto tr48;
		case 92: goto tr49;
	}
	goto tr47;
tr47:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
	goto st15;
tr56:
/* #line 92 "JsonReader.rl" */
	{
                        needsUnescape = true;
                }
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
/* #line 936 "JsonReader.cpp" */
	switch( (*p) ) {
		case 34: goto tr51;
		case 92: goto st19;
	}
	goto st15;
tr42:
/* #line 187 "JsonReader.rl" */
	{
                        std::string name = "";
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }

                        if (debug) {
                           gdx_log_debug("JsonReader","startArray: %s", name.c_str());
                        }
                        startArray(name);
                        {
					stack.resize(top + 1);
				{stack[top++] = 16; goto st43;}}
                }
	goto st16;
tr46:
/* #line 167 "JsonReader.rl" */
	{
                        std::string name = "";
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }

                        if (debug) {
                           gdx_log_debug("JsonReader","startObject: %s", name.c_str());
                        }
                        startObject(name);
                        {
					stack.resize(top + 1);
				{stack[top++] = 16; goto st9;}}
                }
	goto st16;
tr48:
/* #line 88 "JsonReader.rl" */
	{
                        s = p;
                        needsUnescape = false;
                }
/* #line 102 "JsonReader.rl" */
	{
                        std::string value(s, p-s);
                        s = p;
                        if (needsUnescape) value = unescape(value);
                        std::string name;
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }

                        if (debug)gdx_log_debug("JsonReader","string: %s = %s", name.c_str(), value.c_str());;
                        string(name, value);
                }
	goto st16;
tr51:
/* #line 102 "JsonReader.rl" */
	{
                        std::string value(s, p-s);
                        s = p;
                        if (needsUnescape) value = unescape(value);
                        std::string name;
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }

                        if (debug)gdx_log_debug("JsonReader","string: %s = %s", name.c_str(), value.c_str());;
                        string(name, value);
                }
	goto st16;
tr62:
/* #line 115 "JsonReader.rl" */
	{
                        std::string value(s, p-s);
                        s = p;
                        std::string name;
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }
                        if (debug)gdx_log_debug("JsonReader","number: %s = %s", name.c_str(), value.c_str());

                        if (value.find(".") != std::string::npos) {
                            number(name, from_string<float>(value));
                        } else {
                            number(name, from_string<int>(value));
                        }
                }
	goto st16;
tr74:
/* #line 143 "JsonReader.rl" */
	{
                        std::string name;
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }

                        if (debug) {
                           gdx_log_debug("JsonReader","number: %s = false", name.c_str());
                        }
                        boolean(name, false);
                }
	goto st16;
tr80:
/* #line 155 "JsonReader.rl" */
	{
                        std::string name = "";
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }

                        if (debug) {
                           gdx_log_debug("JsonReader","nulll: %s", name.c_str());
                        }
                        string(name, "");
                }
	goto st16;
tr86:
/* #line 131 "JsonReader.rl" */
	{
                        std::string name = "";
                        if (names.size() > 0) {
                            name = names.front();
                            names.pop_front();
                        }
